--- a/src/core/audioclients/CMakeLists.txt
+++ b/src/core/audioclients/CMakeLists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required(VERSION 3.8)
 
 list(APPEND CORE_SOURCES 
   ${CMAKE_CURRENT_SOURCE_DIR}/portaudioclient.cpp 
+  ${CMAKE_CURRENT_SOURCE_DIR}/dummyclient.cpp 
 )
 
 set(CORE_SOURCES ${CORE_SOURCES} PARENT_SCOPE)
