--- a/src/gui/CMakeLists.txt
+++ b/src/gui/CMakeLists.txt
@@ -5,6 +5,8 @@ list(APPEND SOURCES
   ${CMAKE_CURRENT_SOURCE_DIR}/app.cpp 
   ${CMAKE_CURRENT_SOURCE_DIR}/mainframe.cpp 
   ${CMAKE_CURRENT_SOURCE_DIR}/canvas.cpp 
+  ${CMAKE_CURRENT_SOURCE_DIR}/canvasnode.cpp 
+  ${CMAKE_CURRENT_SOURCE_DIR}/canvascontrol.cpp 
 )
 
 set(SOURCES ${SOURCES} PARENT_SCOPE)
