--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -1,13 +1,16 @@
 cmake_minimum_required(VERSION 3.30)
 
-project(core)
+project(core LANGUAGES CXX)
+
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 list(APPEND CORE_SOURCES
   ${CMAKE_CURRENT_SOURCE_DIR}/audioengine.cpp 
-  ${CMAKE_CURRENT_SOURCE_DIR}/project.cpp 
+  ${CMAKE_CURRENT_SOURCE_DIR}/node.cpp 
 )
 
 add_subdirectory(audioclients)
+add_subdirectory(nodes)
 
 add_library(core STATIC ${CORE_SOURCES})
 
@@ -20,5 +23,4 @@ target_link_libraries(core PRIVATE ${Portaudio_LIBRARY} ${RTMIDI_LIBRARIES})
 target_include_directories(core PUBLIC ${SOURCE_HEADERS})
 
 set_property(TARGET core PROPERTY CXX_STANDARD 20)
-set_property(TARGET core PROPERTY CXX_STANDARD_REQUIRED on)
-
+set_property(TARGET core PROPERTY CXX_STANDARD_REQUIRED ON)
