--- a/arl/nodes/CMakeLists.txt
+++ b/arl/nodes/CMakeLists.txt
@@ -1,10 +1,8 @@
 cmake_minimum_required(VERSION 3.30)
 
-project(core)
-
-list(APPEND CORE_SOURCES
+list(APPEND SOURCES
   ${CMAKE_CURRENT_SOURCE_DIR}/output.cpp 
   ${CMAKE_CURRENT_SOURCE_DIR}/oscillator.cpp 
 )
 
-set(CORE_SOURCES ${CORE_SOURCES} PARENT_SCOPE)
+set(SOURCES ${SOURCES} PARENT_SCOPE)
