--- a/arl/audioclients/CMakeLists.txt
+++ b/arl/audioclients/CMakeLists.txt
@@ -1,8 +1,8 @@
 cmake_minimum_required(VERSION 3.30)
 
-list(APPEND CORE_SOURCES 
+list(APPEND SOURCES 
   ${CMAKE_CURRENT_SOURCE_DIR}/portaudioclient.cpp 
   ${CMAKE_CURRENT_SOURCE_DIR}/dummyclient.cpp 
 )
 
-set(CORE_SOURCES ${CORE_SOURCES} PARENT_SCOPE)
+set(SOURCES ${SOURCES} PARENT_SCOPE)
